Add Oceanbase, Dameng, openGauss database support.