@@ -1,8 +1,12 @@
 #!/bin/bash
 
+if [ "$#" -ne 2 ]; then
+  echo "Usage: $0 {benchmark|load|drop|addfk|dropfk|check|gather} {benchmark-config-file} "
+  exit 1
+fi
+
 # ------ Java Environment ------
 #JAVA_HOME=/usr/local/jdk-11.0.9.1+1
-#JAVA_HOME=/usr/local/jdk1.8.0_251
 #JAVACMD=$JAVA_HOME/bin/java
 JAVACMD=java
 
@@ -22,12 +26,10 @@ APP_LIB="${APP_HOME}/*:.:${APP_HOME}/lib/*:${APP_HOME}/modules/*"
 MAIN_CLASS=org.littlestar.tpcc.Benchmark
 
 mkdir -p ${APP_HOME}/logs
-
 cd $APP_HOME
 
 #
 JAVA_VER_STR=$("$JAVACMD" -version 2>&1 | awk -F[\"\-] '/version/ {print $2}')
-
 MAJOR_JAVA_VER="${JAVA_VER_STR%%.*}"
 
 if [ ${MAJOR_JAVA_VER} -eq 1 ]; then
@@ -41,52 +43,40 @@ if [ $MAJOR_JAVA_VER -lt 11 ]; then
 fi
 
 # ------ JVM Options ------
-JVM_OPTS="-server -XX:+IgnoreUnrecognizedVMOptions -Xmx4G -Xms1G -XX:MaxMetaspaceSize=256m"
+JVM_OPTS="-server -Dfile.encoding=UTF-8 -XX:+UseStringDeduplication"
+#JVM_OPTS="${JVM_OPTS} -XX:+PrintCommandLineFlags"
 
-# Always dump on OOM.
-OOM_DUMP="-XX:+HeapDumpOnOutOfMemoryError"
+
+# ------ Always dump on OOM. ------
+OOM_DUMP="-XX:+ExitOnOutOfMemoryError -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./logs/"
 JVM_OPTS="${JVM_OPTS} ${OOM_DUMP}"
+
+
+# ------- Memory Options -----
+MEM_OPTS="-Xms2048m -Xmx2048m -XX:MetaspaceSize=512m -XX:MaxMetaspaceSize=512m "
+JVM_OPTS="${JVM_OPTS} ${MEM_OPTS}"
+
+
+# ------ JVM GC Options ------
+GC_OPTS="-XX:+UseZGC"
+#GC_OPTS="-XX:+UseG1GC"
+JVM_OPTS="${JVM_OPTS} ${GC_OPTS}"
 
 # ------ JVM GC log Options ------
 GC_LOG_FILE="./logs/java_gc_%t.log"
 
-# ---> GC log.
-LOG_GC_A9="-Xlog:gc:file=${GC_LOG_FILE}:time"
 if [ $MAJOR_JAVA_VER -ge 9 ]; then
-  JVM_OPTS="${JVM_OPTS} ${LOG_GC_A9}"
+  #GC_LOG_OPTS="-Xlog:safepoint=info,gc*=debug:file=${GC_LOG_FILE}:time,pid:filecount=4,filesize=20M"
+  GC_LOG_OPTS="-Xlog:safepoint=info,gc*=info:file=${GC_LOG_FILE}:time,pid:filecount=4,filesize=20M"
+else
+  GC_LOG_OPTS="-XX:+PrintGCDetails"
+  GC_LOG_OPTS="${GC_LOG_OPTS} -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCDateStamps"
+  GC_LOG_OPTS="${GC_LOG_OPTS} -Xloggc:${GC_LOG_FILE}"
+  GC_LOG_OPTS="${GC_LOG_OPTS} -XX:+UseGCLogFileRotation -XX:GCLogFileSize=20M -XX:NumberOfGCLogFiles=4"
 fi
+#JVM_OPTS="${JVM_OPTS} ${GC_LOG_OPTS}"
 
-LOG_GC_P9="-Xloggc:%GC_LOG_FILE% -XX:+PrintGC -XX:+PrintGCDateStamps"
-if [ $MAJOR_JAVA_VER -lt 9 ]; then
-  JVM_OPTS="${JVM_OPTS} ${LOG_GC_A9}"
-fi
 
-# ---> GC Details log.
-LOG_GCDETAIL_A9="-Xlog:gc*=debug:file=${GC_LOG_FILE}:time"
-if [ $MAJOR_JAVA_VER -ge 9 ]; then
-  JVM_OPTS="${JVM_OPTS} ${LOG_GCDETAIL_A9}"
-fi
-
-LOG_GCDETAIL_P9="-Xloggc:${GC_LOG_FILE} -XX:+PrintGCDetails -XX:+PrintGCDateStamps"
-if [ $MAJOR_JAVA_VER -lt 9 ]; then
-  JVM_OPTS="${JVM_OPTS} ${LOG_GCDETAIL_P9}"
-fi
-
-# ------ JVM GC Options ------
-# JAVA 8,9,...,15 with G1GC, JAVA 16+ with ZGC.
-G1GC_OPTS="-XX:+UseG1GC -XX:+UseStringDeduplication -XX:MaxGCPauseMillis=100"
-ZGC_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseZGC"
-
-if [ $MAJOR_JAVA_VER -ge 8 ] && [ $MAJOR_JAVA_VER -lt 16 ]; then
-  JVM_OPTS="${JVM_OPTS} ${G1GC_OPTS}"
-else 
-  JVM_OPTS="${JVM_OPTS} ${ZGC_OPTS}"
-fi
-
-if [ "$#" -ne 2 ]; then
-  echo "Usage: $0 {benchmark|load|drop|addfk|dropfk|check} {benchmark-config-file} " 
-  exit 1
-fi
 
 BENCHMARK_CFG=$1
 BENCHMARK_CMD=$2
